<resources>
    <string name="app_name">渤海大学服务站</string>
    <string name="school_motto">多学博见 和而不同</string>
    <string name="welcome">立即体验</string>
    <!-- 登陆  注册-->
    <string name="login">登录</string>
    <string name="enter_title_activity_register">立即注册</string>
    <string name="title_activity_register">注册</string>
    <string name="remember_password">记住密码</string>
    <string name="retrieve_password">找回密码</string>
    <string name="enter_id">请输入您的学号</string>
    <string name="enter_full_name">请输入姓名</string>
    <string name="enter_password">请输入您的密码</string>
    <string name="sure_password">请确认您的密码</string>
    <string name="enter_login">已有账号，直接登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="ok">好的</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="tip_password_not">密码必须为8–16个字符，并且包含数字和字母</string>
    <string name="tip_empty">请填写所需字段</string>
    <string name="tip_no_signal">当前网络不佳，请检查网络是否连通</string>
    <string name="pwd_not_the_same">两次密码输入不一样</string>
    <string name="register_fail">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="tip_exit">再次按下可退出程序</string>

    <string name="t_home">首页</string>
    <string name="t_serive">服务</string>
    <string name="t_learn">学习</string>
    <string name="t_person">我的</string>

    <string name="tip_web_left">已经是第一页！</string>
    <string name="tip_web_right">已经是最后一页！</string>

    <!--    我-->
    <string name="username">学号：</string>
    <string name="my_sign_in">我的签到</string>
    <string name="login_out">退出登录</string>
    <string name="profile_data">个人信息</string>
    <string name="password_setting">密码设置</string>
    <string name="my_share">分享给好友</string>
    <string name="my_file">我的文件</string>
    <string name="version">版本号:</string>
    <string name="setting">设置</string>
    <string name="tip_logout">您确定要退出账号吗?</string>
    <string name="album">从相册</string>
    <string name="photograph">拍照</string>
    <string name="cancel">取消</string>
    <string name="image_upload">头像已上传</string>
    <string name="image_upload_fail">头像已上传失败</string>
    <string name="no_permissions">您拒绝了权限许可</string>

    <!--    个人信息-->
    <string name="fullName">姓名</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="telephone">电话</string>
    <string name="email">邮箱</string>
    <string name="collage">学院</string>
    <string name="major">专业</string>
    <string name="signature">个性签名</string>
    <string name="save">保存</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="sure">确定</string>
    <string name="info_upload_success">用户信息更新成功</string>
    <string name="info_upload_failure">用户信息更新失败</string>
    <string name="tip_fullName">用户名不能为空</string>
    <string name="tip_email_type">邮箱格式不正确</string>
    <string name="tip_telephone_type">手机格式不正确</string>

    <!--    修改密码-->
    <string name="tip_password">请输入旧密码,并设置新密码</string>
    <string name="edit_password">修改密码</string>
    <string name="old_password">请输入旧密码</string>
    <string name="new_password">新密码</string>
    <string name="new_password_again">再次输入新密码</string>
    <string name="submit">提交</string>
    <string name="update_password_success">修改密码成功</string>
    <string name="update_password_failure">修改密码失败</string>

    <!--    服务-->
    <string name="tip_query_notice">通知数据查询失败</string>
    <string name="tip_query_lost">失物数据查询失败</string>
    <string name="delete_failure">删除数据失败</string>
    <string name="add_lost">添加失物招领</string>
    <string name="title">标题</string>
    <string name="contact">联系方式</string>
    <string name="content">具体描述</string>
    <string name="lost_add_success">失物招领发布成功</string>
    <string name="lost_add_failure">失物招领发布失败</string>
    <string name="lost_update_success">失物招领修改成功</string>
    <string name="lost_update_failure">失物招领修改失败</string>
    <string name="query_failure">数据查询失败</string>
    <string name="love_add_confession">我要表白</string>
    <string name="love_to">To:</string>
    <string name="love_to_text">~~学院~~班级的</string>
    <string name="love_from">FROM:</string>
    <string name="love_say_text">说点什么……</string>
    <string name="publish">发布</string>
    <string name="anonymous">匿名</string>
    <string name="love_send">你的表白已发送</string>
    <string name="publish_fail">发布失败</string>

    <string name="get_failure">数据请求失败</string>

    <!--    学习-->
    <string name="everyday_english">每日一句</string>
    <string name="question_bank">题库</string>
    <string name="video_learn">视频课</string>

    <!--    签到-->
    <string name="signIn">签到</string>
    <string name="sign_in_time">签到时间</string>
    <string name="check_in_area">签到范围：渤海大学(滨海校区)</string>
    <string name="sign_in_success">签到成功</string>
    <string name="sign_in_failure">签到定位失败</string>
    <string name="sign_again">重新签到</string>
    <string name="text_sign_in">你今天签到了吗~~</string>

    <string name="campus_talk">分享校园新鲜事</string>
    <string name="add_campus_talk">添加校园说说</string>
    <string name="tip_images_empty">图片不能为空</string>
    <string name="publish_success">发布成功</string>
</resources>
