<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff"
    android:orientation="vertical"
    tools:context=".activity.PasswordEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_password"
            android:textColor="@color/color_000000" />

        <EditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawableLeft="@android:drawable/ic_partial_secure"
            android:ems="10"
            android:hint="@string/old_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@android:drawable/ic_lock_idle_lock"
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_again_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@android:drawable/ic_lock_idle_lock"
            android:ems="10"
            android:hint="@string/new_password_again"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/tip_password_not" />

        <Button
            android:id="@+id/btn_submit_password"
            style="@style/style_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_btn_negative"
            android:text="@string/submit" />
    </LinearLayout>
</LinearLayout>