<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.EditLostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/color_000000" />

            <TextView
                android:id="@+id/lost_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/color_000000" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lost_et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lost_et_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/lost_et_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="top"
            android:hint="@string/content"
            android:minLines="15"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_lost"
            style="@style/style_button"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_btn_negative"
            android:text="@string/submit" />
    </LinearLayout>


</LinearLayout>