<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:src="@mipmap/login_logo" />


    <RelativeLayout
        android:id="@+id/login_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >

        <EditText
            android:id="@+id/login_edit_account"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:digits="0123456789"
            android:drawableLeft="@android:drawable/ic_menu_myplaces"
            android:hint="@string/enter_id"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/login_edit_pwd"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/login_edit_account"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@android:drawable/ic_lock_idle_lock"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"/>


        <CheckBox
            android:id="@+id/login_remember"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_below="@+id/login_edit_pwd"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:checked="false"
            android:text="@string/remember_password"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/login_text_change_pwd"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_below="@+id/login_edit_pwd"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/retrieve_password"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/login_btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_btn_login"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:text="@string/enter_title_activity_register"
            android:textColor="#ffffff"
            android:background="@drawable/selector_btn_negative"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_edit_pwd"
            android:layout_marginTop="60dp"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:background="@drawable/selector_btn_negative"
            android:textStyle="bold"/>
    </RelativeLayout>

</LinearLayout>