<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:orientation="horizontal">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/love_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        fresco:roundAsCircle="true"
        android:layout_margin="5dp"
        fresco:placeholderImage="@mipmap/img_confession"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/love_to"
                    android:textSize="20sp"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/color_love"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/love_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/color_love"
                    android:text="@string/app_name"/>
            </LinearLayout>
            <TextView
                android:id="@+id/love_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/school_motto"
                android:textSize="15sp"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/love_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/anonymous"
                android:layout_gravity="end"
                android:textSize="15sp"
                android:layout_marginRight="5dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>